fix(landing-page): Fix callout z-index (#613)

--- a/styleguide/derek/pattern-components/lp-callout/_lp-callout.scss
+++ b/styleguide/derek/pattern-components/lp-callout/_lp-callout.scss
@@ -8,6 +8,7 @@
   padding: 20px 25px;
   position: relative;
   width: $full-width;
+  z-index: 10;
 }
 
 .lp-callout,
